# waffle

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/scripts/: build.sh
.github/workflows/: learn-github-actions.yaml  release.yaml  test.yaml
tests/: test_waffle.py
waffle/: __main__.py  baker.py  sprinkles.py  waffle.py
waffles/: __main__.py  sprinkles.py  waffle.py
