[tool.poetry]
name = "waffles"
version = "0.0.1"
description = ""
authors = ["Shahnoza Bekbulaeva <shakhnoza.bekbulaeva@nttdata.com>"]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.21.1"
rich = "^10.15.2"
python-decouple = "^3.5"

[tool.poetry.dev-dependencies]
ipykernel = "^6.6.0"
black = "^21.10b0"
pytest = "flake8"
flake8 = "^4.0.1"
pyupgrade = "^2.29.0"
mypy = "0.782"
pre-commit = "^2.15.0"
pylint = "^2.11.1"
poetry-version-plugin = "^0.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
